--- a/assets/preload/data/eddy-river/eddy-river-easy.json
+++ b/assets/preload/data/eddy-river/eddy-river-easy.json
@@ -2379,7 +2379,7 @@
 			}
 		],
 		"gfVersion": "gf-origami",
-		"song": "Eddy River",
+		"song": "Eddy-River",
 		"validScore": true,
 		"stage": "river",
 		"needsVoices": true,
